curso-nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/node/(.*)
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3001
      - path: /api/serviceregistry/(.*)
        pathType: Prefix
        backend:
          service:
            name: serviceregistry
            port:
              number: 8010
      - path: /api/apigateway/(.*)
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8082
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: userws
            port:
              number: 8097
  ingressClassName: nginx

  # node 3001, sr 8010, apigateway 8082, user 8097
